@@ -1,5 +1,3 @@
-#Properties of this specific CALIPH build
-#Fri, 13 Sep 2013 10:21:47 +0200
 #
 # This file is part of the LIRE project: http://www.semanticmetadata.net/lire
 # LIRE is free software; you can redistribute it and/or modify
@@ -38,11 +36,11 @@
 # (c) 2002-2013 by Mathias Lux (mathias@juggle.at)
 #  http://www.semanticmetadata.net/lire, http://www.lire-project.net
 #
-# Updated: 03.08.13 10:19
+# Updated: 13.09.13 18:35
 #
 
 #Properties of this specific CALIPH build
 #Tue, 09 Apr 2013 13:39:22 +0200
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2013/09/13 10\:21
-build-number=225
+build-date=2013/09/13 18\:35
+build-number=226
